# Zhuai

./: .gitignore  AGENTS.md  ARXIV_HTML_REPORT.md  FINAL_REPORT.md  JOURNAL_EXPAND_REPORT.md  PLATFORM_FEATURES_REPORT.md  PROJECT_SUMMARY.md  README.md  README_CN.md  README_OLD.md  STATUS.md  TEST_SUMMARY.md  WEB_REPORT.md  auto_research.py  example.py  final_verification.py  journals.csv  pyproject.toml  requirements-dev.txt  requirements.txt  research_agent.py  research_agent_web.py  results.csv  test_all_sources.py  test_complete.py  test_new_features.py  test_sources.py  test_zhuai.py  unavailable.txt  verify_all_sources.py
journal_reports/: journal_report.md  journals.csv
test_out/: available_papers.csv  unavailable_papers.csv  unavailable_papers.html
test_out2/: available_papers.csv  unavailable_papers.csv  unavailable_papers.html
test_output/high_dimensional_space_distance/: results.csv  unavailable_citations.txt  unavailable_citations_with_citations.csv
test_output/summation_effect/: results.csv  unavailable_citations.txt  unavailable_citations_with_citations.csv
test_output/高维度空间距离/: results.csv  unavailable_citations.txt  unavailable_citations_with_citations.csv
zhuai/: __init__.py  cli.py
zhuai/core/: __init__.py  citation.py  downloader.py  query_parser.py  searcher.py  searcher.py.bak  validator.py
zhuai/journals/: __init__.py  comprehensive_data.py  generate_database.py  manager.py  models.py  openalex_source.py  report.py  sources.py
zhuai/journals/data/: journals.json.bak  openalex_journals.json
zhuai/models/: __init__.py  paper.py  resource.py
zhuai/sources/: __init__.py  arxiv.py  baidu.py  base.py  bing.py  browser_base.py  cnki.py  crossref.py  github.py  huggingface.py  kaggle.py  modelscope.py  pubmed.py  semanticscholar.py  vip.py  wanfang.py
zhuai/utils/: __init__.py  html_converter.py  vision_helper.py
zhuai/web/: __init__.py  app.py
zhuai/web/static/css/: style.css
zhuai/web/static/js/: main.js
zhuai/web/templates/: index.html
