[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zhuai"
version = "2.0.0"
description = "拽 - A powerful academic paper search and download tool"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "CycleUser", email = "cycleuser@users.noreply.github.com"}
]
keywords = [
    "academic",
    "papers",
    "research",
    "download",
    "arxiv",
    "pubmed",
    "literature",
    "search",
    "zhuai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "aiohttp>=3.8.0",
    "arxiv>=1.4.0",
    "pandas>=1.5.0",
    "PyPDF2>=3.0.0",
    "tqdm>=4.64.0",
    "click>=8.1.0",
    "python-dateutil>=2.8.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.20.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
]

[project.scripts]
zhuai = "zhuai.cli:main"

[project.urls]
Homepage = "https://github.com/cycleuser/Zhuai"
Repository = "https://github.com/cycleuser/Zhuai.git"
Bug-Tracker = "https://github.com/cycleuser/Zhuai/issues"

[tool.setuptools]
packages = ["zhuai", "zhuai.core", "zhuai.models", "zhuai.sources", "zhuai.utils"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=zhuai --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true